Fix form field alignment.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2068,7 +2068,7 @@ a {
 .article-comments .form_field_inline {
   display: inline-block;
   width: calc(50% - 10px);
-  margin-top: 5px;
+  margin-top: 0;
   vertical-align: top;
 }
 .article-comments .form_field_inline:first-child {
